<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_origem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remetente"/>
    <EditText
        android:id="@+id/et_origem_ler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/remetente_hint"/>
    <TextView
        android:id="@+id/tv_destino_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinatario"/>
    <EditText
        android:id="@+id/et_destino_ler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/destinatatario_hint"/>
    <TextView
        android:id="@+id/tv_ultima_mensagem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultima_mensagem"/>
    <EditText
        android:id="@+id/et_ultima_mensagem_ler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ultima_mensagem_hint"/>
    <Button
        android:id="@+id/bt_ler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/ler"/>
</LinearLayout>